--- a/src/android/build.gradle
+++ b/src/android/build.gradle
@@ -7,5 +7,5 @@ allprojects {
 }
 
 dependencies {
-	implementation 'com.github.bendspoons:scanlibrary:-SNAPSHOT'
+	implementation 'com.github.bendspoons:scanlibrary:127c17192f'
 }
